--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,16 +7,21 @@
 </header>
 
 <div *ngIf="articles">
-  YES: {{articles == null}}
-</div>
-
-
-<div *ngIf="articles">
-<!--YES:{{JSON.stringify(articles)}}-->
 
   <div *ngFor="let article of articles.data">
+
     <div class="article">
-      {{article.id}}
+      <h2>{{article.attributes.title}}</h2>
+      <p></p>
+      {{article.attributes.images.image_intro}}
+
+      <img src="{{article.attributes.images.image_intro}}">
+     <div [innerHTML]="article.attributes.text | slice:0:400 "></div>
+
+      <a class="button button1" [routerLink]="['/article', article.attributes.id]">
+        Read More
+      </a>
+
     </div>
   </div>
 
