--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
 }
 header {
   width: 100%;
-  height: 100vh;
+  height: 50vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -39,4 +39,11 @@ header div span {
 .logo-3 {
   letter-spacing: 20px;
   margin-left: 18px;
+}
+
+.article {
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  background-color: beige;
 }
