--- a/src/styles.css
+++ b/src/styles.css
@@ -47,6 +47,8 @@ header div span {
   background-color: #f1f1f1;
   margin-bottom: 100px;
   padding: 30px;
+  border-radius: 20px;
+  overflow: hidden;
 }
 
 .article-container img {
